# graph-fight

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE_MIT  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/: index.ts
src/: game.rs  geometry.rs  lib.rs  shapes.rs  utils.rs
src/game/: arena.rs  obstacle.rs  player.rs  team.rs
src/geometry/: math.rs
static/: index.html
tests/: offline.rs  web.rs
www/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.ts
www/src/client/: index.ts
